fix: z-index popup

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -11,6 +11,7 @@
   left: -100%;
   top: 0;
   position: fixed;
+  z-index: 2;
 
   opacity: 0.2;
   transition: opacity 0.2s linear, left 0s linear 0.3s;
